# Nexus

./: .gitignore  Cargo.toml  HANDOFF.md  LICENSE-APACHE  PLAN.md  README.md
.claude/: plan.md  settings.local.json
.github/: CLAUDE_SETUP.md
.github/workflows/: ci.yml  claude-review.yml  claude.yml  security-scan.yml
.nexus/: policy.md
.nexus/research/: phase1-cargo-init.md  phase1-clap-patterns.md  phase1-error-handling.md  phase1-serde-patterns.md  phase1-settings-loader.md  phase1-tokio-setup.md
.nexus/schemas/: context_pack.schema.json  exec.result.schema.json  plan.schema.json  proposed_action.schema.json  research.schema.json  router.workflow.schema.json  settings.schema.json  workflow.definition.schema.json
.nexus/test-fixtures/actions/: denied-command.json  file-create-action.json  file-delete-action.json  file-rename-action.json  fuzzy-match-patch.json  grouped-approval.json  invalid-absolute-path.json  invalid-path-traversal.json  path-traversal-attempt.json  search-replace-patch.json  valid-patch.json  whole-file-patch.json
.nexus/test-fixtures/diffs/: conflict.diff  multi-file.diff  simple-add.diff
.nexus/test-fixtures/events/: sample-run.jsonl  valid-event.json
.nexus/test-fixtures/settings/: invalid-no-version.json  valid-full.json  valid-minimal.json
docs/: architecture.md  implementation-plan.md  phase1-implementation-plan.md  schema-improvement-plan.md
docs/plans/: phase2-implementation-plan.md
src/: cli.rs  error.rs  lib.rs  main.rs  settings.rs
src/event_log/: helpers.rs  mod.rs  reader.rs  writer.rs
src/executor/: adapter.rs  client.rs  mod.rs  parser.rs  prompt.rs  streaming.rs
src/types/: action.rs  event.rs  mod.rs  settings.rs
tests/: event_log.rs  executor.rs  integration.rs
tests/fixtures/codex_responses/: search_replace.txt  unified_diff_single.txt
