[package]
name = "nexus"
version = "0.1.0"
authors = ["AJ"]
categories = ["command-line-utilities", "development-tools"]
edition = "2024"
keywords = ["refactoring", "cli", "code-generation", "diff", "llm"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/andrewmcadoo/nexus"
rust-version = "1.85"
description = "Safe multi-file refactoring CLI for AI-assisted code transformations"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt", "macros", "signal"] }
async-trait = "0.1"
async-stream = "0.3"
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
dotenvy = "0.15"
secrecy = "0.10"
fs2 = "0.4"
bytes = "1"
futures = "0.3"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio-retry2 = "0.5"
regex = "1"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
wiremock = "0.6"

[profile.release]
lto = true
strip = true
